--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile_picture.jpg"
+  avatar           : "profile_picture.png"
   name             : "吕星澎"
   pronouns         : "he/him"  
   bio              : "sp201610@foxmail.com" 
