--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,15 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+
+  - title: "主页"
+    url: /about/
+
   - title: "项目经历"
     url: /Projects/
 
   - title: "简历"
     url: /CV/    
     
-  # - title: "Guide"
-  #  url: /markdown/
+   - title: "Guide"
+    url: /markdown/
