--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,9 +8,8 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-
   - title: "主页"
-    url: /
+    url: /about/
 
   - title: "项目经历"
     url: /Projects/
