--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /about/   
     
   - title: "项目经历"
-    url: /publications/
+    url: /projects/
 
   - title: "简历"
     url: /CV/    
