--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "ch-CN"
 site_theme               : "default"
 title                    : "sp201610的主页"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : "sp201610"
 description              : &description "personal description"
 url                      : https://sp201610.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
