--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /projects/
 
   - title: "简历"
-    url: /CV/    
+    url: /resume/    
     
   - title: "Guide"
     url: /markdown/
