--- a/_config.yml
+++ b/_config.yml
@@ -229,6 +229,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
+   # _resume
+  - scope:
+      path: ""
+      type: resume
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 # Sass/SCSS
 sass:
